--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
     "dev": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "eslint-plugin-jest-dom": "^5.1.0",
+    "eslint-plugin-testing-library": "^6.1.0",
     "i": "^0.3.7",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jose": "^4.15.4",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.288.0",
@@ -20,7 +29,8 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "ts-jest": "^29.1.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.5",
