--- a/package.json
+++ b/package.json
@@ -10,35 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "eslint-plugin-jest-dom": "^5.1.0",
-    "eslint-plugin-testing-library": "^6.1.0",
-    "i": "^0.3.7",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-environment-node": "^29.7.0",
     "jose": "^4.15.4",
     "js-cookie": "^3.0.5",
-    "lucide-react": "^0.288.0",
     "next": "^13.5.5",
     "npm": "^10.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.47.0",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7",
-    "ts-jest": "^29.1.1",
-    "zod": "^3.22.4"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.6",
     "@types/js-cookie": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -46,9 +33,15 @@
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.5",
+    "eslint-plugin-jest-dom": "^5.1.0",
+    "eslint-plugin-testing-library": "^6.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "postcss": "^8",
     "prettier": "3.0.3",
     "tailwindcss": "^3",
+    "ts-jest": "^29.1.1",
     "typescript": "^5"
   }
 }
